; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_dblflt.c_DeInstallDblFltHook.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_dblflt.c_DeInstallDblFltHook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OldDblFltHandler = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeInstallDblFltHook() #0 {
  %1 = call i32 (...) @ENTER_FUNC()
  %2 = call i32 (...) @MaskIrqs()
  %3 = load i64, i64* @OldDblFltHandler, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @TRUE, align 4
  %7 = call i32 @RemoveAllSWBreakpoints(i32 %6)
  %8 = load i64, i64* @OldDblFltHandler, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i32 @SetGlobalInt(i32 8, i32 %9)
  store i64 0, i64* @OldDblFltHandler, align 8
  br label %11

11:                                               ; preds = %5, %0
  %12 = call i32 (...) @UnmaskIrqs()
  %13 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @MaskIrqs(...) #1

declare dso_local i32 @RemoveAllSWBreakpoints(i32) #1

declare dso_local i32 @SetGlobalInt(i32, i32) #1

declare dso_local i32 @UnmaskIrqs(...) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
